# music_store_tutorial

./: Cargo.toml  README.md
src/: db.rs  http_handlers.rs  main.rs  music_error.rs
templates/: add_music.html  edit_music.html  index.html  list_music.html
