[package]
name = "music_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
actix-web = "4.3.1"
askama = "0.12.0"
askama_actix = "0.14.0"
serde = { version = "1.0.163", features = ["derive"] }
lazy_static = "1.4.0"